# colca_prepoc

./: .gitignore  NEXT_STEPS.md  OZONETEL_TEST_CALL.md  main.py  pyproject.toml  start.sh
backend/agents/: agent.py  prompt.py
backend/agents/tools/: retrieval_tool.py
backend/core/: config.py
backend/pipecat/: pipeline.py
backend/pipecat/serializers/: ozonetel.py
backend/server/: app.py  models.py
backend/strands/: agent.py  prompt.py
backend/strands/tools/: retrieval_tool.py
backend/utils/: call_store.py  call_summary.py  ingestion.py  lead_context.py  ozonetel.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  disposition.ts  index.css  main.tsx
frontend/src/components/: BriefForm.tsx  DispositionPanel.tsx  HistorySidebar.tsx
~/Files/Projects/colca_prototype/: GETTING_STARTED.md
