[project]
name = "colca-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.47",
    "fastapi[standard]>=0.139.0",
    "pipecat-ai[elevenlabs,silero]>=1.5.0",
    "python-dotenv>=1.2.2",
    "strands-agents>=1.47.0",
    "strands-agents-tools>=0.8.3",
]
