[project]
name = "colca-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-aws>=1.6.2",
    "langchain-community>=0.4.2",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "pipecat-ai[aws,deepgram,elevenlabs,silero]>=1.5.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "strands-agents>=1.47.0",
    "strands-agents-tools>=0.8.3",
]
